<resources>
    <string name="app_name">Quemeful-QR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr_code">Scan QR Code</string>

    <style name="RoundedImageView">
        <item name="cornerSize">8dp</item>
    </style>

    <string name="check_in">Check In</string>
    <string name="generate_new_qr">Generate New QR</string>
    <string name="you_don_t_have_any_promotion_qr_code_for_this_event">You don\'t have any promotion QR code for this event</string>
    <string name="event_promotion">Event Promotion</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="generate">Generate</string>
    <string name="quemeful_qr">Quemeful QR</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="log_in">Log In</string>
    <string name="already_logged_in">Already Logged In</string>
    <string name="get_started">Get Started!</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="event_title">Event Title</string>
    <string name="create_event">Create Event</string>
    <string name="e_g_tech_event_concerts">e.g. Tech Event, Concerts,...</string>
    <string name="add_poster">Add Poster</string>
    <string name="event_details">Event Details</string>
    <string name="event_description">Event Description ...</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="dd_mm_yyyy">yyyy-MM-dd</string>
    <string name="_16_00">230pm</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="_20_00">530pm</string>
    <string name="qr_code">QR Code</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_new_event_check">Create New Event (check)</string>
    <string name="new_qr_code">New QR Code</string>
    =======
    <string name="edit_profile" />
    <string name="save">Save</string>
    <string name="confirm_checkin">Confirm Check in</string>
    <string name="Location">Location</string>
    <string name="Address">Address</string>
    <string name="generate_new">Generate New</string>
    <string name="share">Share</string>
    <string name="view_attendees_announcements"><![CDATA[View Attendees & Announcements]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_for_this_event">Sign Up For this Event</string>
    <string name="promotion">Promotion</string>
    <string name="scan_event_qr_code">Scan Event QR Code</string>
    <string name="reuse_existing">Reuse Existing</string>
    <string name="qr_code_click_create_event_first">QR Code (click create event first)</string>
    <string name="use_existing_event_qr_code">Use Existing Event QR Code</string>
    <string name="please_scan_the_above_qr_code_to_check_in_for_this_event">Please scan the above QR Code to Check In for this Event</string>
    <string name="event_qr_code_n_reused">Event QR Code\n(reused)</string>
    <string name="enter_address_to_see_location">Enter address to see location</string>
    <string name="next_milestone_0_1">Next Milestone: 0/1</string>
    <string name="congratulations_nyou_hit_a_milestone">Congratulations 🎉\nYou hit a milestone!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="see_event_location">See Event Location</string>
    <string name="address">Address</string>
    >>>>>>> 835b82b (Admin and new no login requirement, and profile)
</resources>