<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5900C2FF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/create_event"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/event_title"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/e_g_tech_event_concerts"
        android:inputType="text"
        android:padding="4dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/event_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_title"
        android:layout_margin="5dp"
        android:text="@string/add_poster"
        android:textSize="22sp" />

    <ImageButton
        android:id="@+id/add_poster_button"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/event_poster"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:src="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/event_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_poster_button"
        android:layout_margin="5dp"
        android:text="@string/event_details"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_event_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_details"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/event_description"
        android:inputType="text"
        android:padding="4dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/event_starting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_event_details"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/event_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start_date"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/event_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="120dp"
            android:text="@string/start_time"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_starting_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_starting"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/dd_mm_yyyy"
            android:textSize="20sp"
            android:inputType="date"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_startTime"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="85dp"
            android:padding="4dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/_16_00"
            android:textSize="20sp"
            android:inputType="time"
            android:drawableRight="@android:drawable/ic_menu_recent_history"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_ending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_starting_inputs"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/event_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/end_date"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/event_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="135dp"
            android:text="@string/end_time"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_ending_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_ending"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/dd_mm_yyyy"
            android:textSize="20sp"
            android:inputType="date"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_endTime"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="85dp"
            android:padding="4dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/_20_00"
            android:textSize="20sp"
            android:inputType="time"
            android:drawableRight="@android:drawable/ic_menu_recent_history"/>
    </LinearLayout>

    <TextView
        android:id="@+id/qr_code_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_ending_inputs"
        android:layout_margin="5dp"
        android:text="@string/qr_code"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/QR_generate_button_for_createEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qr_code_title"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#009688"
        android:text="@string/generate_new_qr"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/buttons_onTaskbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/QR_generate_button_for_createEvent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E3D39E"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:backgroundTint="#739DF1"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>