<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/queuemfulQrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeToTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/quemeful_qr"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic" />
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/welcomeToTextView" />-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="330dp"
        android:layout_height="230dp"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_for_logo"
        android:padding="18dp"
        android:layout_below="@id/queuemfulQrTextView"
        android:layout_centerHorizontal="true"/>
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/queuemfulQrTextView" />-->

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#E3D39E"
        android:text="@string/get_started"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:layout_below="@id/lastNameEditText"
        android:layout_centerHorizontal="true"/>
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        android:layout_marginBottom="70dp" />-->

    <Button
        android:id="@+id/SkipLoginForExistingUsersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#E3D39E"
        android:text="@string/already_logged_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:layout_below="@id/getStartedButton"
        android:layout_centerHorizontal="true"/>
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/getStartedButton"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        android:layout_marginBottom="30dp" />-->

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="15dp"
        android:fontFamily="serif"
        android:text="@string/log_in"
        android:lines="1"
        android:textAlignment="center"
        android:textSize="20sp" />

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:layout_below="@id/login_header"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:layout_below="@id/login_header"
        android:layout_centerHorizontal="true" />
<!--        app:layout_constraintBottom_toTopOf="@id/lastNameEditText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/logo"-->
<!--        app:layout_constraintVertical_bias="0.937"-->
<!--        app:layout_constraintVertical_chainStyle="packed" />-->

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:layout_below="@id/firstNameEditText"
        android:layout_centerHorizontal="true" />
<!--        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</RelativeLayout>
